--- a/src/main/resources/templates/imagesView.html
+++ b/src/main/resources/templates/imagesView.html
@@ -16,7 +16,7 @@
                 <img th:src="${image.url}" th:alt="${image.id}" class="card-img-top">
                 <div class="card-body">
                     <p class="card-text">Score: <span th:text="${voteCounterService.getVotesForImage(image.id)}"></span></p>
-                    <form th:action="@{/images/vote/{id}(id=${image.id})}" method="post">
+                    <form th:action="@{/vote/{id}(id=${image.id})}" method="post">
                         <button type="submit" class="btn btn-primary">Vote</button>
                     </form>
                 </div>
